# python_learning

./: pyproject.toml
src/learning/: arrayDuplicates.ipynb  arrayLeader.ipynb  arraySearch.ipynb  arrays.ipynb  binarySearch.ipynb  checkBst.ipynb  code.ipynb  countDigit.ipynb  data.ipynb  geeksgeeks.ipynb  greet.py  iterators.ipynb  largestElement.ipynb  learning.ipynb  main.py  missingAndRepeating.ipynb  missingArray.ipynb  my_module.py  parenthsisChecker.ipynb  reverseStringWords.ipynb  secondLargest.ipynb  sumNatural.ipynb  twosumPairswithSum.ipynb
src/learning/practice/: CountOddandEven.py  LastindexofOne.py  PrintElementsofArray.py  QueueUsingArray.py  anagram.py  araySubset.py  arrayInsertAtIndex.py  arraySerach.py  binaraySearch.py  common.py  countofsmallerelements.py  duplicates.py  equilibrium.py  evenlyDivide.py  findPairGivenDifference.py  firstandSecondSmallests.py  floorSortedArray.py  implementStackUsingArray.py  largestElement.py  leader.py  majority.py  min_diffrence.py  minimumCostofropes.py  missingInSecondArray.py  missingNumbers.py  moveAllZeroestoEnd.py  numOfOccurance.py  pairs.py  peakElement.py  powerOfTwo.py  primeNumber.py  printNWithoutLoop.py  reverseArray.py  rotatingAnArray.py  secondLargest.py  sortedArraySearch.py  squareRoot.py  stringDuplicatesRemoval.py  sumNaturalNumber.py  twoElements.py  (+1 more)
